--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -27,15 +27,15 @@
       <form id="pengeluaranForm" class="row g-3">
         <div class="col-md-3">
           <label for="keterangan" class="form-label">Nama</label>
-          <input type="text" class="form-control" id="keterangan" placeholder="Nama" required>
+          <input type="text" class="form-control" id="keterangan" required>
         </div>
         <div class="col-md-2">
           <label for="kuantitas" class="form-label">Kuantitas</label>
-          <input type="number" class="form-control" id="kuantitas" placeholder="Qty" required min="1" value="1">
+          <input type="number" class="form-control" id="kuantitas" required value="1" min="1">
         </div>
         <div class="col-md-3">
           <label for="jumlah" class="form-label">Nominal (Rp)</label>
-          <input type="number" class="form-control" id="jumlah" placeholder="Nominal" required>
+          <input type="number" class="form-control" id="jumlah" required>
         </div>
         <div class="col-md-2 d-grid align-items-end">
           <button type="submit" class="btn btn-success"><i class="fa-solid fa-plus"></i> Tambah</button>
@@ -47,7 +47,10 @@
   <div class="card mb-4">
     <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
       <div><i class="fa-solid fa-table"></i> Riwayat Pengeluaran</div>
-      <i id="clearFilterBtn" class="fa-solid fa-filter-circle-xmark" style="cursor:pointer; color:#fff; font-size:1.2rem;" title="Clear Filter"></i>
+      <div>
+        <i id="deleteSelectedBtn" class="fa-solid fa-trash" style="cursor:pointer; color:#fff; font-size:1.2rem; margin-right:0.8rem;" title="Hapus Terpilih"></i>
+        <i id="clearFilterBtn" class="fa-solid fa-filter-circle-xmark" style="cursor:pointer; color:#fff; font-size:1.2rem;" title="Clear Filter"></i>
+      </div>
     </div>
     <div class="card-body p-0 table-responsive">
       <table class="table table-striped mb-0" id="tablePengeluaran">
@@ -58,8 +61,8 @@
             <th><span class="filter-text" data-col="kuantitas" style="cursor:pointer;">Kuantitas</span> <i class="fa-solid fa-caret-down filter-icon" data-col="kuantitas"></i></th>
             <th><span class="filter-text" data-col="jumlah" style="cursor:pointer;">Nominal</span> <i class="fa-solid fa-caret-down filter-icon" data-col="jumlah"></i></th>
             <th><span class="filter-text" data-col="uploader" style="cursor:pointer;">Uploader</span> <i class="fa-solid fa-caret-down filter-icon" data-col="uploader"></i></th>
-            <th><span class="filter-text" data-col="tanggal" style="cursor:pointer;">Tanggal</span> <i class="fa-solid fa-caret-down filter-icon" data-col="tanggal"></i></th>
-            <th>Aksi</th>
+            <th><span class="filter-text" data-col="tanggal" style="cursor:pointer;">Tanggal & Waktu</span> <i class="fa-solid fa-caret-down filter-icon" data-col="tanggal"></i></th>
+            <th><input type="checkbox" id="selectAll"></th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -74,178 +77,175 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-auth-compat.js"></script>
-<script>
-const firebaseConfig = {
-  apiKey: "AIzaSyCxjTmRPiF4OrRAsneB_SUi1SpGOgkwrYg",
-  authDomain: "genzet-home.firebaseapp.com",
-  projectId: "genzet-home",
-  storageBucket: "genzet-home.appspot.com",
-  messagingSenderId: "586231239859",
-  appId: "1:586231239859:web:9fc3a69f2f2ef0bf8c8cc6"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
-const auth = firebase.auth();
 
-class MyNavbar extends HTMLElement {
-  connectedCallback() {
-    this.innerHTML = `
-      <nav class="navbar navbar-expand-lg navbar-light mb-4 border-bottom border-secondary-subtle">
-        <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="#">GENZET HOME</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a href="cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
-              <li class="nav-item"><a href="pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
-              <li class="nav-item"><a href="pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
-              <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    `;
-    setTimeout(() => {
-      this.querySelector("#logoutBtn")?.addEventListener("click", (e) => {
-        e.preventDefault();
-        Swal.fire({ title:"Keluar dari akun?", icon:"warning", showCancelButton:true, confirmButtonText:"Ya, Logout" })
-        .then(res => { if (res.isConfirmed) auth.signOut().then(() => Swal.fire("Logout berhasil", "", "success").then(() => location.href = "login.html")); });
-      });
-    }, 0);
-  }
-}
-customElements.define('my-navbar', MyNavbar);
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+  import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc, orderBy, query } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
-auth.onAuthStateChanged(user => { if (!user) location.href = "login.html"; });
+  const firebaseConfig = {
+    apiKey: "AIzaSyCxjTmRPiF4OrRAsneB_SUi1SpGOgkwrYg",
+    authDomain: "genzet-home.firebaseapp.com",
+    projectId: "genzet-home",
+    storageBucket: "genzet-home.appspot.com",
+    messagingSenderId: "586231239859",
+    appId: "1:586231239859:web:9fc3a69f2f2ef0bf8c8cc6"
+  };
 
-const form = document.getElementById("pengeluaranForm");
-const tbody = document.querySelector("#tablePengeluaran tbody");
-const totalEl = document.getElementById("totalPengeluaran");
-let dataSemua = [], filteredData = [];
-const sortState = {};
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  const auth = getAuth(app);
 
-async function loadData() {
-  const snapshot = await db.collection("pengeluaran").orderBy("tanggal", "desc").get();
-  dataSemua = [];
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    data.id = doc.id;
-    dataSemua.push(data);
+  let dataSemua = [], filteredData = [];
+  const sortState = {};
+  const tbody = document.querySelector("#tablePengeluaran tbody");
+  const totalEl = document.getElementById("totalPengeluaran");
+
+  onAuthStateChanged(auth, (user) => {
+    if (!user) window.location.href = "login.html";
   });
-  renderTable(dataSemua);
-}
 
-function formatTanggal(tgl) {
-  if (!tgl) return "-";
-  const [d, m] = tgl.split("-");
-  return `${d}-${m}-2025`;
-}
-
-function renderTable(data) {
-  tbody.innerHTML = "";
-  let total = 0;
-  data.forEach((item, idx) => {
-    total += parseInt(item.jumlah || 0);
-    tbody.innerHTML += `
-      <tr>
-        <td>${idx + 1}</td>
-        <td>${item.keterangan || "-"}</td>
-        <td>${item.kuantitas || "-"}</td>
-        <td>Rp ${parseInt(item.jumlah || 0).toLocaleString()}</td>
-        <td>${item.uploader || "-"}</td>
-        <td>${formatTanggal(item.tanggal)}</td>
-        <td><button class="btn btn-sm btn-danger" onclick="hapusData('${item.id}')"><i class="fa-solid fa-trash"></i></button></td>
-      </tr>`;
-  });
-  totalEl.textContent = "Rp " + total.toLocaleString();
-}
-
-form.addEventListener("submit", async e => {
-  e.preventDefault();
-  const keterangan = document.getElementById("keterangan").value.trim();
-  const kuantitas = parseInt(document.getElementById("kuantitas").value.trim());
-  const jumlah = parseInt(document.getElementById("jumlah").value.trim());
-  const now = new Date();
-  const tanggal = `${String(now.getDate()).padStart(2, "0")}-${String(now.getMonth()+1).padStart(2, "0")}-${String(now.getFullYear()).slice(-2)}`;
-  const uploader = auth.currentUser?.email || "-";
-  try {
-    await db.collection("pengeluaran").add({ keterangan, kuantitas, jumlah, tanggal, uploader });
-    form.reset();
-    await loadData();
-    Swal.fire({ toast:true, position:'top-end', icon:'success', title:'Data berhasil ditambahkan!', showConfirmButton:false, timer:2500, timerProgressBar:true });
-  } catch {
-    Swal.fire("❗ Gagal menyimpan data", "", "error");
+  async function loadData() {
+    const q = query(collection(db, "pengeluaran"), orderBy("tanggal", "desc"));
+    const snapshot = await getDocs(q);
+    dataSemua = [];
+    snapshot.forEach(docSnap => dataSemua.push({ id: docSnap.id, ...docSnap.data() }));
+    renderTable(dataSemua);
   }
-});
 
-async function hapusData(id) {
-  const res = await Swal.fire({ title:"Hapus data ini?", icon:"warning", showCancelButton:true, confirmButtonText:"Ya" });
-  if (res.isConfirmed) {
-    await db.collection("pengeluaran").doc(id).delete();
-    await loadData();
-    Swal.fire({ toast:true, position:"top-end", icon:"success", title:"Berhasil dihapus", showConfirmButton:false, timer:2000, timerProgressBar:true });
-  }
-}
-
-document.querySelectorAll(".filter-icon").forEach(icon => {
-  icon.addEventListener("click", () => {
-    const col = icon.getAttribute("data-col");
-    sortState[col] = (sortState[col] === "asc") ? "desc" : "asc";
-    const sorted = [...(filteredData.length ? filteredData : dataSemua)].sort((a, b) => {
-      if (col === "jumlah" || col === "kuantitas") return sortState[col] === "asc" ? (a[col]||0) - (b[col]||0) : (b[col]||0) - (a[col]||0);
-      return sortState[col] === "asc"
-        ? String(a[col] || "").localeCompare(b[col] || "")
-        : String(b[col] || "").localeCompare(a[col] || "");
+  function renderTable(data) {
+    tbody.innerHTML = "";
+    let total = 0;
+    data.forEach((item, idx) => {
+      total += parseInt(item.jumlah || 0);
+      tbody.innerHTML += `
+        <tr>
+          <td>${idx + 1}</td>
+          <td>${item.keterangan || "-"}</td>
+          <td>${item.kuantitas || "-"}</td>
+          <td>Rp ${parseInt(item.jumlah || 0).toLocaleString()}</td>
+          <td>${item.uploader || "-"}</td>
+          <td>${item.tanggal || "-"}</td>
+          <td><input type="checkbox" class="rowCheckbox" value="${item.id}"></td>
+        </tr>`;
     });
-    renderTable(sorted);
-  });
-});
+    totalEl.textContent = "Rp " + total.toLocaleString();
+  }
 
-document.querySelectorAll(".filter-text").forEach(el => {
-  el.addEventListener("click", () => {
-    const col = el.getAttribute("data-col");
-    if (col === "keterangan" || col === "jumlah" || col === "kuantitas" || col === "uploader") {
-      Swal.fire({ title:"Cari " + col.charAt(0).toUpperCase() + col.slice(1), input:"text", showCancelButton:true })
-      .then(res => {
-        if (res.isConfirmed) {
-          filteredData = dataSemua.filter(d => String(d[col] || "").toLowerCase().includes(res.value.toLowerCase()));
-          renderTable(filteredData);
-        }
-      });
-    } else if (col === "tanggal") {
-      Swal.fire({
-        title: "Filter Tanggal",
-        html: `<input id="tgl1" class="swal2-input" placeholder="DDMMYY atau DDMMYYYY"><input id="tgl2" class="swal2-input" placeholder="Opsional DDMMYY">`,
-        showCancelButton: true,
-        confirmButtonText: "Filter"
-      }).then(res => {
-        if (res.isConfirmed) {
-          let t1 = document.getElementById("tgl1").value.replace(/\D/g, "");
-          let t2 = document.getElementById("tgl2").value.replace(/\D/g, "");
-          const toFormat = str => str.length === 8 ? `${str.slice(0,2)}-${str.slice(2,4)}-${str.slice(6,8)}` : `${str.slice(0,2)}-${str.slice(2,4)}-${str.slice(4,6)}`;
-          if (t1) t1 = toFormat(t1);
-          if (t2) t2 = toFormat(t2);
-          filteredData = [...dataSemua];
-          if (t1 && !t2) filteredData = filteredData.filter(d => d.tanggal === t1);
-          else if (t1 && t2) filteredData = filteredData.filter(d => d.tanggal >= t1 && d.tanggal <= t2);
-          renderTable(filteredData);
-        }
-      });
+  document.getElementById("pengeluaranForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const keterangan = document.getElementById("keterangan").value.trim();
+    const kuantitas = parseInt(document.getElementById("kuantitas").value.trim());
+    const jumlah = parseInt(document.getElementById("jumlah").value.trim());
+    const now = new Date();
+    const tanggal = `${String(now.getDate()).padStart(2, "0")}-${String(now.getMonth()+1).padStart(2, "0")}-${now.getFullYear()} ${String(now.getHours()).padStart(2, "0")}:${String(now.getMinutes()).padStart(2, "0")}:${String(now.getSeconds()).padStart(2, "0")}`;
+    const uploader = auth.currentUser?.email || "-";
+    await addDoc(collection(db, "pengeluaran"), { keterangan, kuantitas, jumlah, tanggal, uploader });
+    e.target.reset();
+    await loadData();
+    Swal.fire({ toast:true, position:'top-end', icon:'success', title:'Data berhasil ditambahkan!', showConfirmButton:false, timer:2000, timerProgressBar:true });
+  });
+
+  document.getElementById("selectAll").addEventListener("change", (e) => {
+    document.querySelectorAll(".rowCheckbox").forEach(cb => cb.checked = e.target.checked);
+  });
+
+  document.getElementById("deleteSelectedBtn").addEventListener("click", async () => {
+    const selectedIds = [...document.querySelectorAll(".rowCheckbox:checked")].map(cb => cb.value);
+    if (selectedIds.length === 0) return Swal.fire("Pilih data yang akan dihapus!", "", "warning");
+    const res = await Swal.fire({ title:"Hapus data terpilih?", icon:"warning", showCancelButton:true, confirmButtonText:"Ya" });
+    if (res.isConfirmed) {
+      for (const id of selectedIds) await deleteDoc(doc(db, "pengeluaran", id));
+      await loadData();
+      Swal.fire({ toast:true, position:"top-end", icon:"success", title:"Data terhapus", showConfirmButton:false, timer:2000 });
     }
   });
-});
 
-document.getElementById("clearFilterBtn").addEventListener("click", () => {
-  filteredData = [];
-  renderTable(dataSemua);
-});
+  document.querySelectorAll(".filter-icon").forEach(icon => {
+    icon.addEventListener("click", () => {
+      const col = icon.getAttribute("data-col");
+      sortState[col] = (sortState[col] === "asc") ? "desc" : "asc";
+      const sorted = [...(filteredData.length ? filteredData : dataSemua)].sort((a, b) => {
+        if (col === "jumlah" || col === "kuantitas") return sortState[col] === "asc" ? (a[col]||0) - (b[col]||0) : (b[col]||0) - (a[col]||0);
+        return sortState[col] === "asc"
+          ? String(a[col] || "").localeCompare(b[col] || "")
+          : String(b[col] || "").localeCompare(a[col] || "");
+      });
+      renderTable(sorted);
+    });
+  });
 
-loadData();
+  document.querySelectorAll(".filter-text").forEach(el => {
+    el.addEventListener("click", () => {
+      const col = el.getAttribute("data-col");
+      if (["keterangan", "jumlah", "kuantitas", "uploader"].includes(col)) {
+        Swal.fire({ title:"Cari " + col.charAt(0).toUpperCase() + col.slice(1), input:"text", showCancelButton:true })
+        .then(res => {
+          if (res.isConfirmed) {
+            filteredData = dataSemua.filter(d => String(d[col] || "").toLowerCase().includes(res.value.toLowerCase()));
+            renderTable(filteredData);
+          }
+        });
+      } else if (col === "tanggal") {
+        Swal.fire({
+          title: "Filter Tanggal & Waktu (Detik)",
+          html: `<input id="tgl1" class="swal2-input" placeholder="DDMMYYYYHHMMSS"><input id="tgl2" class="swal2-input" placeholder="Opsional DDMMYYYYHHMMSS">`,
+          showCancelButton: true,
+          confirmButtonText: "Filter"
+        }).then(res => {
+          if (res.isConfirmed) {
+            let t1 = document.getElementById("tgl1").value.replace(/\D/g, "");
+            let t2 = document.getElementById("tgl2").value.replace(/\D/g, "");
+            const toFormat = str => `${str.slice(0,2)}-${str.slice(2,4)}-${str.slice(4,8)} ${str.slice(8,10)}:${str.slice(10,12)}:${str.slice(12,14)}`;
+            if (t1) t1 = toFormat(t1);
+            if (t2) t2 = toFormat(t2);
+            filteredData = [...dataSemua];
+            if (t1 && !t2) filteredData = filteredData.filter(d => d.tanggal.startsWith(t1));
+            else if (t1 && t2) filteredData = filteredData.filter(d => d.tanggal >= t1 && d.tanggal <= t2);
+            renderTable(filteredData);
+          }
+        });
+      }
+    });
+  });
+
+  document.getElementById("clearFilterBtn").addEventListener("click", () => {
+    filteredData = [];
+    renderTable(dataSemua);
+  });
+
+  loadData();
+
+  // Navbar Web Component
+  class MyNavbar extends HTMLElement {
+    connectedCallback() {
+      this.innerHTML = `
+        <nav class="navbar navbar-expand-lg navbar-light mb-4 border-bottom border-secondary-subtle">
+          <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">GENZET HOME</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
+                <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
+                <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>`;
+      setTimeout(() => {
+        this.querySelector("#logoutBtn")?.addEventListener("click", (e) => {
+          e.preventDefault();
+          Swal.fire({ title:"Keluar dari akun?", icon:"warning", showCancelButton:true, confirmButtonText:"Ya, Logout" })
+            .then(res => { if (res.isConfirmed) signOut(auth).then(() => Swal.fire("Logout berhasil", "", "success").then(() => location.href = "login.html")); });
+        });
+      }, 0);
+    }
+  }
+  customElements.define('my-navbar', MyNavbar);
 </script>
 </body>
 </html>
