--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -231,6 +231,7 @@
                 <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
                 <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
                 <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-boxes-stacked"></i> Assets</a></li>
                 <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
               </ul>
             </div>
