--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     if (user) {
       window.location.href = "cpanel.html"; // Sudah login → redirect ke cpanel.html
     } else {
-      window.location.href = "login.html";  // Belum login → redirect ke login.html
+      window.location.href = "form.html";  // Belum login → redirect ke login.html
     }
   });
 </script>
