--- a/cpanel.html
+++ b/cpanel.html
@@ -8,7 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
   <style>
-    body { background-color: #f8f9fa; }
+    body { background-color: #f8f9fa;
+          overflow: auto;   /* atau scroll / auto */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE & Edge lama */}
     .progress { height: 20px; }
     .progress-bar { font-size: 0; transition: width 0.8s ease; }
     td { vertical-align: middle; }
