--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="card-body p-0 table-responsive">
-        <table class="table table-striped mb-0" id="tablePengeluaran">
+        <table class="table table-striped mb-0 text-nowrap" id="tablePengeluaran">
           <thead class="table-light">
             <tr>
               <th>No</th>
