--- a/pemasukan.html
+++ b/pemasukan.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card-body p-0 table-responsive">
-        <table class="table table-striped mb-0" id="tablePemasukan">
+        <table class="table table-striped mb-0 text-nowrap" id="tablePemasukan">
           <thead class="table-light">
             <tr>
               <th>No</th>
